# mockingparrot

./: .gitignore  Cargo.toml  README.md  clippy.toml  config.template.toml  hummingparrot.template.toml
.github/workflows/: ci.yaml
models/: anthropic.toml  openai.toml
src/: api.rs  app.rs  chat.rs  config.rs  conversation.rs  events.rs  hotkeys.rs  lib.rs  main.rs  state.rs  ui.rs
src/api/: anthropic.rs  openai.rs
src/app/: actions.rs  events.rs  focus.rs  hotkeys.rs  state.rs  ui.rs
src/app/state/: paths.rs  ui.rs
src/app/ui/: chat.rs  config.rs  debug.rs
src/app/ui/chat/: history.rs  new.rs
src/config/: anthropic.rs  models.rs  openai.rs  system.rs  ui.rs  value_range.rs
src/events/: actions.rs
src/state/: focus.rs
tests/: config.rs
