[package]
name = "hummingparrot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
crossterm = "0.27.0"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.14"
tui-textarea = "0.4.0"
