[package]
name = "mockingparrot"
description = "A TUI Chat Client for ChatGPT"
version = "0.2.0"
license = "Unlicense"
repository = "https://github.com/ArielHorwitz/mockingparrot"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
crossterm = { version = "0.27.0", features = ["serde"] }
dirs = "5.0.1"
num-traits = "0.2.19"
ratatui = { version = "0.29.0", features = ["all-widgets", "serde", "unstable-rendered-line-info"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.14"
tui-textarea = "0.7.0"

[lints.clippy]
missing_errors_doc = "allow"
pedantic = { level = "warn", priority = -1 }
